--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title>Collaborative Drawing with AI</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
+        />
         <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.min.js"></script>
         <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
         <style>
@@ -15,6 +18,11 @@
             #generateButton,
             #status {
                 margin: 10px;
+                position: initial;
+            }
+
+            canvas {
+                margin: auto;
             }
         </style>
     </head>
