--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
             canvas {
                 margin: auto;
+                max-width: 100%;
             }
         </style>
     </head>
