--- a/index.html
+++ b/index.html
@@ -8,34 +8,57 @@
         />
         <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.min.js"></script>
         <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+            crossorigin="anonymous"
+        />
         <style>
             body {
                 margin: 0;
                 padding: 0;
             }
 
-            #promptInput,
-            #generateButton,
-            #status {
-                margin: 10px;
-                position: initial;
+            #canvas {
+                text-align: center;
             }
 
             canvas {
-                margin: auto;
+                margin: 10px;
                 max-width: 100%;
+                height: auto;
             }
         </style>
     </head>
     <body>
-        <input
-            type="text"
-            id="promptInput"
-            placeholder="Cambia prompt..."
-            value="a landscape with the style of..."
-        />
-        <button id="generateButton">Genera</button>
-        <p id="status">...</p>
+        <div class="container mt-5">
+            <div class="mb-3">
+                <form class="form-floating">
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="promptInput"
+                        value="A landscape in the style of..."
+                    />
+                    <label for="floatingInputInvalid"
+                        >Scrivi il tuo prompt</label
+                    >
+                </form>
+            </div>
+            <div class="mb-3">
+                <button
+                    id="generateButton"
+                    type="button"
+                    class="btn btn-primary"
+                >
+                    Genera
+                </button>
+            </div>
+
+            <p id="status">...</p>
+        </div>
+
         <script src="sketch.js"></script>
     </body>
 </html>
